# browser

./: CLAUDE.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: build.yml
crates/browser/: Cargo.toml
crates/browser/benches/: browser_benchmarks.rs
crates/browser/src/: config.rs  engine.rs  lib.rs  main.rs  page.rs  pipeline.rs
crates/cache/: Cargo.toml
crates/cache/src/: disk_cache.rs  http_cache.rs  lib.rs  memory_cache.rs
crates/common/: Cargo.toml
crates/common/src/: color.rs  error.rs  geometry.rs  lib.rs  units.rs
crates/compositor/: Cargo.toml
crates/compositor/src/: animation.rs  compositor.rs  layer.rs  lib.rs  scene.rs
crates/css_parser/: Cargo.toml
crates/css_parser/src/: color.rs  lib.rs  media.rs  parser.rs  properties.rs  selector.rs  stylesheet.rs  values.rs
crates/dom/: Cargo.toml
crates/dom/src/: attributes.rs  comment.rs  document.rs  element.rs  events.rs  lib.rs  node.rs  text.rs  tree.rs  window.rs
crates/gpu/: Cargo.toml
crates/gpu/src/: buffer.rs  context.rs  lib.rs  pipeline.rs  renderer.rs  shaders.rs  texture.rs
crates/html_parser/: Cargo.toml
crates/html_parser/src/: lib.rs  parser.rs  serializer.rs  tokenizer.rs  tree_builder.rs
crates/js_engine/: Cargo.toml
crates/js_engine/src/: bindings.rs  console.rs  context.rs  engine.rs  event_loop.rs  lib.rs  modules.rs  runtime.rs  timers.rs
crates/layout/: Cargo.toml
crates/layout/src/: block.rs  box_model.rs  engine.rs  flex.rs  grid.rs  inline.rs  layout_box.rs  lib.rs  text.rs  tree.rs
crates/media/: Cargo.toml
crates/media/src/: audio.rs  canvas.rs  image_decoder.rs  lib.rs  media_element.rs  media_session.rs  video.rs
crates/networking/: Cargo.toml
crates/networking/src/: client.rs  connection.rs  cookies.rs  dns.rs  headers.rs  lib.rs  loader.rs  request.rs  response.rs
crates/render/: Cargo.toml
crates/render/src/: color.rs  commands.rs  display_list.rs  font.rs  image_cache.rs  lib.rs  painter.rs  rasterizer.rs
crates/security/: Cargo.toml
crates/security/src/: cors.rs  csp.rs  lib.rs  mixed_content.rs  origin.rs  permissions.rs  sandbox.rs  secure_context.rs  sri.rs
crates/style/: Cargo.toml
crates/style/src/: cascade.rs  computed.rs  default.css  inheritance.rs  lib.rs  matching.rs  resolver.rs  stylist.rs
crates/ui/: Cargo.toml
crates/ui/src/: address_bar.rs  bookmarks.rs  browser.rs  devtools.rs  downloads.rs  find_bar.rs  history_ui.rs  lib.rs  menu.rs  navigation.rs  settings.rs  tab.rs  tab_bar.rs  theme.rs  window.rs
crates/web_apis/: Cargo.toml
crates/web_apis/src/: console.rs  crypto.rs  events.rs  fetch.rs  geolocation.rs  history.rs  intersection_observer.rs  lib.rs  location.rs  mutation_observer.rs  navigator.rs  performance.rs  resize_observer.rs  storage.rs  url.rs  websocket.rs  workers.rs
packaging/linux/: build-linux.sh
packaging/macos/: Info.plist  Oxide Browser.entitlements  build-macos.sh  generate-icon.sh  install.sh
packaging/windows/: License.rtf  Product.wxs  build-windows.ps1
