[workspace]
resolver = "2"
members = [
    "crates/browser",
    "crates/dom",
    "crates/html_parser",
    "crates/css_parser",
    "crates/style",
    "crates/layout",
    "crates/render",
    "crates/networking",
    "crates/js_engine",
    "crates/web_apis",
    "crates/compositor",
    "crates/gpu",
    "crates/media",
    "crates/security",
    "crates/cache",
    "crates/ui",
    "crates/common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Browser Team"]
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Parsing
html5ever = "0.27"
markup5ever = "0.12"
markup5ever_rcdom = "0.3"
cssparser = "0.34"
selectors = "0.26"

# Networking
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "deflate", "stream"] }
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.1"
http-body-util = "0.1"
tower = { version = "0.4", features = ["full"] }
rustls = "0.23"
tokio-rustls = "0.26"
webpki-roots = "0.26"
url = "2.5"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Graphics & UI
winit = "0.30"
wgpu = "22.1"
raw-window-handle = "0.6"
softbuffer = "0.4"
image = "0.25"
fontdue = "0.9"
ab_glyph = "0.2"
png = "0.17"
jpeg-decoder = "0.3"
gif = "0.13"
webp = "0.3"

# JavaScript
boa_engine = "0.19"
boa_gc = "0.19"
boa_parser = "0.19"

# Data structures
indexmap = "2.5"
slotmap = "1.0"
smallvec = "1.13"
string_cache = "0.8"
tendril = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
parking_lot = "0.12"
once_cell = "1.19"
lazy_static = "1.5"
bitflags = "2.6"
derive_more = { version = "1.0", features = ["full"] }
num-traits = "0.2"
ordered-float = "4.2"

# Unicode & Text
unicode-segmentation = "1.11"
unicode-bidi = "0.3"
unicode-normalization = "0.1"
icu_segmenter = "1.5"

# Memory management
bumpalo = "3.16"

# Cryptography
ring = "0.17"
sha2 = "0.10"

# Compression
flate2 = "1.0"
brotli = "6.0"

# Testing & Benchmarking
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
