[package]
name = "compositor"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
gpu = { path = "../gpu" }
render = { path = "../render" }
layout = { path = "../layout" }
wgpu.workspace = true
parking_lot.workspace = true
slotmap.workspace = true
smallvec.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
ordered-float.workspace = true
rayon = "1.10"
