[package]
name = "gpu"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
wgpu.workspace = true
raw-window-handle.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
bytemuck = { version = "1.18", features = ["derive"] }
glam = "0.29"
