[package]
name = "layout"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
dom = { path = "../dom" }
style = { path = "../style" }
css_parser = { path = "../css_parser" }
smallvec.workspace = true
slotmap.workspace = true
indexmap.workspace = true
parking_lot.workspace = true
bitflags.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
ordered-float.workspace = true
unicode-bidi.workspace = true
unicode-segmentation.workspace = true
rayon = "1.10"
taffy = "0.6"
