[package]
name = "browser_security"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2.5"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
base64 = "0.21"
regex = "1.10"
parking_lot = "0.12"
bitflags = "2.4"

[dev-dependencies]
tempfile = "3.10"
