[package]
name = "style"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
dom = { path = "../dom" }
css_parser = { path = "../css_parser" }
url.workspace = true
selectors.workspace = true
smallvec.workspace = true
indexmap.workspace = true
parking_lot.workspace = true
bitflags.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
ordered-float.workspace = true
rayon = "1.10"
